main.css
body {

}

body, h1, h2, h3, a, p {
  padding: 0;
  margin: 0;
  font-family: Poppins, Helvetica, Arial, sans-serif;
}

a {
  text-decoration: none;
}

header {
  background-image: url(assets/logo.png);
  background-size: 50px;
  background-repeat: no-repeat;
  background-position: 20px 10px;
  height: 70px;
  position: relative;
}

header > a {
  display: block;
  width: 70px;
  height: 70px;
  font-size: 0rem;
  position: absolute;
  left: 0;
}

.toplinks a {
  color: #6B7EA4;
  padding: 6px;
  margin-top: 10px;
  text-align: right;
  width: 100px;
  font-size: 0.9rem;
  text-transform: uppercase;
}

.flex {
  display: flex;
}

.toplinks {
  position: absolute;
  right: 50px;
}

#top {
  background: url('assets/header.png');
  background-size: 80%;
  background-repeat: no-repeat;
  background-position: 50%;
  height: 400px;
  max-width: 1000px;
  max-height: 300px;
  margin: 0 auto;
  margin-bottom: 40px;
  text-align: center;
  font-size: 0.01rem;
  text-indent: -9999px;
  position: relative;
  padding-bottom: 20px;
}

#top h2 {
  font-size: 0.01rem;
  text-indent: -9999px;
}

#prop {
  background: url('assets/secondback.png') no-repeat;
  background-position: 50%;
  margin-bottom: 50px;
  align-items: center;
  justify-content: center;
  width: 100%;
  float: left;
  clear: both;
  display: flex;
  padding-top: 30px;
  padding-bottom: 10px;
  min-width: 350px;
}

#prop h2 {
  display: block;
  width: 160px;
  padding-top: 3px;
  text-align: left;
  font-size: 1.18rem;
  color: #557EC9;
  font-weight: bold;
  padding-left: 90px;
  padding-right: 20px;
  line-height: 1.6rem;
  height: 220px;
}

#prop h2 p {
  font-size: 0.85rem;
  font-weight: normal;
  color: #111;
  margin-left: -80px;
  margin-top: 20px;
  line-height: 1.3rem;
}

#prop1 {
  background: url('assets/prop1.png') no-repeat;
  background-size: 80px;
}

#prop2 {
  background: url('assets/prop2.png') no-repeat;
  background-size: 80px;
}

#prop3 {
  background: url('assets/prop3.png') no-repeat;
  background-size: 80px;
}

#approach {
  background: url('assets/approach.png') no-repeat;
  background-size: 400px;
  min-width: 350px;
  padding: 20px;
  width: 700px;
  margin: 20px auto;
}

#approach h2 {
  text-align: left;
  padding-left: 420px;
  display: block;
  float: left;
  clear: both;
  margin-top: -20px;
}

#approach p {
  margin-top: 20px;
  font-size: 0.9rem;
  text-transform: none;
  font-weight: normal;
  margin-bottom: 10px;
}

.cap {
  text-transform: uppercase;
}

#team {
  padding: 30px 40px;
  background-color: #EAF3FF;
  min-width: 350px;
}

#team div {
  margin: 20px auto;
  max-width: 800px;

}

#contact {
  padding: 40px;
  margin: 0 auto;
  width: 800px;
  min-width: 350px;
}

#contact input, #contact textarea {
  width: 100%;
  padding: 5px;
  margin-top: 10px;
  margin-bottom: 10px;
  font-family: Poppins;
}

#contact h2 {
  margin-bottom: 20px;
}

#contact p {
  font-size: 0.9rem;
  margin-bottom: 20px;
  width: auto;
}

textarea {
  height: 70px;
}

footer {
  padding: 20px 20px;
  background-color: #95B2E8;
  position: relative;
  display: flex;
}

footer div {
  display: block;
  font-size: 0.9rem;
  width: 50%;
}

footer span, footer a {
  display: block;
}

footer #links1 span:first-child {
  font-size: 1.2rem;
  font-weight: bolder;
}

footer span:last-child, footer a {
  text-transform: uppercase;
  font-size: 0.85rem;
  color: #111;
}

footer #links2 {
  text-align: right;
}

#googleBtn {
  background-image: url(assets/googlePlay.png);
  background-size: 100%;
  width: 100px;
}

#appBtn {
  background-image: url(assets/appleStore.png);
  background-size: 90%;
  width: 100px;
  margin-left: 10px;
}

.store {
  background-size: 100px;
  width: 100px;
  height: 30px;
  text-decoration: none;
  display: block;
  background-repeat: no-repeat;
  float: left;
}

.download {
  margin: 210px 25%;
  display: block;
  width: 500px;
  height: 30px;
}

@media screen and (max-width: 800px) {
  .toplinks {
    background-image: url(assets/menu.png);
    background-repeat: no-repeat;
    background-position: 100px 15px;  
    background-size: 40px;
    right: 10px;
    top: 0;
    height: 50px;
    position: absolute;
  }

  .toplinks > a {
    background-color: #fff;
    display: none;
    background-image: url(assets/menu-item.png);
    background-repeat: no-repeat;
    background-size: 10px;
    text-align: left;
    text-indent: 15px;
    width: 100px;
  }

  .toplinks.active a {
    display: block;
  }

  #top {
    background-image: url(assets/header-sm.png);
    background-size: contain;
    padding: 0;
    width: auto;
    margin: 20px auto;
    max-height: 600px;
    height: 500px;
  }

  #googleBtn {
    width: 120px;
    height: 37px;
  }

  #appBtn {
    width: 135px;
    margin-top: 10px;
    margin-left: 0;
    height: 45px;
  }

  .download {
    margin: 530px 40%;
    height: 140px;
    width: 100px;
  }

  h2 {
    font-size: 1rem;
  }

  #team h3 {
    font-size: 1rem;
  }

  #team p {
    margin: 5px 0;
    font-size: 0.9rem;
  }

  .flex {
    flex-direction: column;
  }

  .toplinks {
    width: 150px;
    padding-top: 15px;
  }

  .toplinks a {
    padding: 0;
    line-height: 1rem;
  }

  #prop {
    flex-direction: row;
    flex-wrap: wrap;
    margin-top: 30px;
  }

  #prop h2 {
    width: 90vw;
    background-position: 20px 10px;
    background-size: 55px;
    margin-top: 10px;
    padding-left: 85px;
    padding-right: 20px;
    height: auto;
    padding-bottom: 15px;
    padding-top: 5px;
  }

  #prop h2 p {
    padding-left: 80px;
    line-height: 1.3rem;
    margin-top: 5px;
  }

  #approach {
    background-position: 0 500px;
    background-size: contain;
    height: 975px;
    width: auto;
    padding: 0 40px;
    margin-bottom: 0;
    overflow:none;
  }

  #team {
    width: auto;
  }

  #approach h2 {
    padding-left: 0px;
    text-align: left;
  }

  #approach h2 p {
    text-indent: 0;
  }

  #contact {
    width: auto;
    min-width: auto;
  }


  #contact input, #contact textarea {
    width: 70vw;
  }
}

